[package]
name = "papers"
version = "0.1.0"
authors = ["Jakob <jakob.lindqvist@chalmers.se>"]
description = "Scientific papers manager"
edition = "2018"

[dependencies]
reqwest = "0.7.3"
indicatif = "0.7.0"
console = "0.5.0"
clap = "2.31.2"
ftp = "2.2.1"
num_cpus = "1.0"
serde = "1.0.82"
serde_json = "1.0.33"
serde_derive = "1.0.82"

[dev-dependencies]
assert_cli = "0.4"
